分布図サンプル変更

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Accessのデータベース化して、<br>
 	<tr><td id=headder1 align=center>生物分布情報収集</td></tr>
 	<tr><td><br />
 ・外来植物生息情報<br />
-&emsp;<a href="">サンプル</a><br />
+&emsp;<a href="http://gairai.sakura.ne.jp/bunpu/zairai_form.html">サンプル</a><br />
 	</td></tr>
 	</table>
 	<br />
