メール問い合わせ機能追加準備

--- a/index.html
+++ b/index.html
@@ -154,9 +154,16 @@ Accessのデータベース化して、<br>
 		&emsp;&emsp;ＦＡＸ 048-797-9442<br />
 		<img src="./images/spacer.gif" width="50" alt="" align=left >
 		&emsp;&emsp;最寄駅 東武野田線豊春駅<br />
-		&emsp;&emsp;代表:藤田和彦</a>
-	<br><br>
-	    </div>
+		&emsp;&emsp;代表:藤田和彦</a><br>
+	<br>
+	</div>
+
+        <ul>
+	  <li id="header_contact">
+	    <a href="">メールでお問い合わせ</a>
+	  </li>
+	<ul>
+
       </div><!-- class="col-md-6 col-lg-4 padding3" -->
 
       </div><!-- 入れ子row -->
