メール問い合わせ欄改良1

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Accessのデータベース化して、<br>
 	<br>
 	</div>
 
-        <ul>
+	<ul class="clerfix" id="header_tel_contact">
 	  <li id="header_contact">
 	    <a href="">メールでお問い合わせ</a>
 	  </li>
