--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <LINK REL="SHORTCUT ICON" HREF="Haguro.ico"> 
 
 <!-- BootstrapのCSS読み込み -->
-<link href="./newimg/bootstrap.min.css" rel="stylesheet">
+<link href="./css/bootstrap.min.css" rel="stylesheet">
 <!-- When用CSS読み込み -->
-<LINK media=all href="newimg/font2016.css" type=text/css rel=stylesheet>
-    <!-- BootstrapのJS読み込み -->
-    <script src="js/bootstrap.min.js"></script>
+<LINK media=all href="css/font2016.css" type=text/css rel=stylesheet>
+<!-- BootstrapのJS読み込み -->
+<script src="js/bootstrap.min.js"></script>
 <!-- jQuery読み込み -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -42,21 +42,50 @@ function MM_openBrWindow(theURL,winName) { //v2.0
 
   w=window.open(theURL,winName);
 }
-
 //-->
 </script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-103625315-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7978614478918136",
+    enable_page_level_ads: true
+  });
+</script>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K7QP6XX');</script>
+<!-- End Google Tag Manager -->
 </head>
-<body style="background:url(newimg/back.gif) #4BA7EA repeat-x top" bgcolor="#4BA7EA" text="#3c3c3c" leftmargin="0" marginheight="0" marginwidth="0" topmargin="0" bottommargin="0">
+<body style="background:url(images/back.gif) #4BA7EA repeat-x top" bgcolor="#4BA7EA" text="#3c3c3c" leftmargin="0" marginheight="0" marginwidth="0" topmargin="0" bottommargin="0">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K7QP6XX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="container">
 <a name="toptop"></a>
 
   <div class="row">
     <div class="visible-sm visible-md visible-lg col-sm-1" ></div>
     <div class="col-sm-10 rinen" style="background-color:#eeffff">
-	<!-- IMG src="newimg/logo100.gif">
-	<IMG src="newimg/g.gif" -->生物データ保管サービス<BR clear="left">
+	生物データ保管サービス<BR clear="left">
 	<FONT color=#4169E1>
-	データ収集から保管、保管中のデータ検索を請負います。</FONT>
+	生き物好きが集まって、動き始めます。</FONT>
     </div><!-- class="col-sm-10 rinen" -->
     <div class="visible-sm visible-md visible-lg col-sm-1"></div>
   </div>
@@ -69,7 +98,7 @@ function MM_openBrWindow(theURL,winName) { //v2.0
     <div class="row">
       <div class="col-md-6 col-lg-4 padding1" >
 	<table width="100%">
-	<tr><td align="center">1.データを収集します。</td></tr>
+	<tr><td align="center">1.データ収集</td></tr>
 	<tr><td id=headder1 align=center>鳥類</td>
 	</tr>
 	</table>
@@ -82,76 +111,111 @@ function MM_openBrWindow(theURL,winName) { //v2.0
 <br />
 	<div align="center">
 	<IMG alt=朝の鳥 src="./images/asanotori.png" width="200" class="img-responsive" >
-	<a href="../asa/index.php?&myurl=071f9554bbb21eb69c886af2291faf59">デモ版はこちら</a><br>
+	<a href="http://gairai.sakura.ne.jp/asa/index.php?&myurl=071f9554bbb21eb69c886af2291faf59">デモ版はこちら</a><br>
 	</div>
 <br />
 <br />
-<a href="../asaregi/basic.php">使用申込みページ</a><br />
+&emsp;<a href="http://gairai.sakura.ne.jp/asaregi/basic.php">使用申込みページ</a><br />
 <br />
-<div class=""waku_waku>
-<FONT color="#808000" size=2>「朝の鳥」カスタマイズサービス</font><br />
-観察項目の追加・変更等のご要望に応じます。<br>
-<br />
-<FONT color="#808000" size=2>広告主も募集中です。</font><br />
-<br />
-</div>
 	<table width=100%>
-	<tr><td id=headder1 align=center>生物分布情報収集</td></tr>
-	<tr><td><br />
-・外来植物生息情報<br />
-&emsp;<a href="http://gairai.sakura.ne.jp/bunpu/zairai_form.html">サンプル</a><br />
+	<tr><td id=headder1 align=center>朝の鳥の楽しみ</td></tr>
+	<tr><td align="center">2017年8月
+	<IMG alt=今月の鳥 src="./images/August.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年7月
+	<IMG alt=7月の鳥 src="./images/July.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年6月
+	<IMG alt=6月の鳥 src="./images/June.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年5月
+	<IMG alt=5月の鳥 src="./images/May.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年1～8月
+	<IMG alt=今年の鳥 src="./images/kotoshi.png" width="244" class="img-responsive" >
 	</td></tr>
 	</table>
 	<br />
+
     </div>
     	<!-- 2列目 -->
     <div class="col-md-6 col-lg-4 padding2" >
 	<table width=100%>
-	<tr><td align="center">2.データを保管します。</td></tr>
-	<tr><td id=headder1 align=center>データベース化</td></tr>
+	<tr><td align="center">2.情報共有</td></tr>
+	<tr><td id=headder1 align=center>本/Webページ/論文/他</td></tr>
 	<tr><td>
-<br>
-<FONT color=#2c4b78 size=2>
-ファイルメーカーPro、または<br>
-Accessのデータベース化して、<br>
-データを保管します。<br>
-<br>
-注）両製品で持て余すほどの大容量データはお取り扱いできません。</font>
+	&emsp;<a href="https://bookmeter.com/users/775060">読書メーター</a>
 	</td></tr>
-	</table>
-<br />
-	<table width=100%>
-	<tr><td id=headder1 align=center>人・医療</td></tr>
-	<tr><td><br />
-・医学演題（Web）<br />
-・診療データ（File Maker Pro Advanced）<br />
+	<tr><td align="center">
+	&emsp;&emsp;32冊（鳥類:31、他:1)<br />
+	<br />
 	</td></tr>
 	</table>
 	<br />
-
+	<br />
+	&emsp;<a href="./egret/index.html">サギのコロニー観察記録</a><br />
+	<br />
+	<br />
+	<br />
+	<br />
+	&emsp;<a href="">ハクセキレイの塒観察記録</a>（準備中）<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	&emsp;<a href="http://gairai.sakura.ne.jp/manju/">元朝秘史でバードウォッチング</a><br />
+	<br />
+	<br />
+	<br />
+	<br />
+	&emsp;<a href="http://outdoor.blogmura.com/birdwatching/">日本ブログ村 バードウォッチング</a><br />
     </div>
     <!-- 3列目 -->
     <div class="col-md-6 col-lg-4 padding3" >
 	<table width=100%>
-	<tr><td align="center">3.データを検索します。</td></tr>
-	<tr><td id=headder1 align=center>SQL、VBA</td></tr>
-	<tr><td><br>
-データ検索・集計に必要なプログラムを随時、作成します。
+	<tr><td align="center">3.ビジネス</td></tr>
+	<tr><td id=headder1 align=center>データベース化</td></tr>
+	<tr><td>
+<FONT color=#2c4b78 size=2>
+ファイルメーカーPro、または<br>
+Accessのデータベース化して、<br>
+データを保管します。<br>
+<br />
+データ検索・集計に必要なプログラムを随時、作成します。<br>
+<br>
+	<FONT color="#808000" size=2>実績<br>
+・医学演題（Web）<br />
+・診療データ（File Maker Pro Advanced）<br />
+・外来植物分布情報収集</font> &emsp;<a href="http://gairai.sakura.ne.jp/bunpu/zairai_form.html">サンプル</a><br />
+
 	</td></tr>
 	</table>
 <br>
-<br>
+<div class="waku_waku">
+・「朝の鳥」カスタマイズ<br />
+　　観察項目の追加・変更等のご要望に応じます。<br>
+・「朝の鳥」に広告を掲載できます。
+</div>
 
-<a href="../asa/kenmei/">ちょっと休憩</a>
 <br>
+	<table width=100%>
+	<tr><td id=headder1 align=center>アフィリエート</td></tr>
+	</td></tr>
+	</table>
 <br>
-
+	<div align="center">
+<a target="_blank"  href="https://www.amazon.co.jp/gp/product/4829901713/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=4829901713&linkCode=as2&tag=fuji56kasu-22&linkId=324385fa78c8031411d1d30ad2d46bc0"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=4829901713&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=fuji56kasu-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=fuji56kasu-22&l=am2&o=9&a=4829901713" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
 <br>
+<a target="_blank"  href="https://www.amazon.co.jp/gp/product/486090933X/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=486090933X&linkCode=as2&tag=fuji56kasu-22&linkId=450f9fae43ec6697b4bef7f0257a0b7c"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=486090933X&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=fuji56kasu-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=fuji56kasu-22&l=am2&o=9&a=486090933X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
+<br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=fuji56kasu-22&m=amazon&o=9&p=8&l=as1&IS2=1&detail=1&asins=458630006X&linkId=93ea957cc2e45c888916e9efad4738a9&bc1=ffffff&lt1=_blank&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
+    </iframe>
+<br><br>
 	<div class="wakuKoukoku"><br>
 		<img src="./images/tonbo-f.gif" width="50" alt="" align=left >
 		&emsp;&emsp;生物データ保管サービス<br />
 		&emsp;&emsp;〒344-0047 埼玉県春日部市<br />
-		&emsp;&emsp;ＦＡＸ 048-797-9442<br />
+		&emsp;&emsp;ＦＡＸ 048-611-7313<br />
 		<img src="./images/spacer.gif" width="50" alt="" align=left >
 		&emsp;&emsp;最寄駅 東武野田線豊春駅<br />
 		&emsp;&emsp;代表:藤田和彦</a><br>
@@ -160,7 +224,7 @@ Accessのデータベース化して、<br>
 
 	<ul class="clerfix" id="header_tel_contact">
 	  <li id="header_contact">
-	    <a href="">メールでお問い合わせ</a>
+	    <a href="mailto:asanotori@gairai.sakura.ne.jp">&emsp;メールで<br />&emsp;お問い合わせ</a>
 	  </li>
 	<ul>
 
@@ -188,7 +252,38 @@ Accessのデータベース化して、<br>
 			<span id="news" >WHAT'S NEW</span>
                         <TABLE cellSpacing=0 cellPadding=2 width="100%">
                           <TBODY>
-
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2017/7/29</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　新URLに移転しました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2017/7/14</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　Google アナリティクスを導入しました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2017/7/5</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　サギのコロニー観察記録をアップしました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2017/6/24</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　アフィリエートはじめました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
                           <TR>
                             <TD class=f09 align="left"><FONT color=#24843f>2017/5/28</FONT></TD></TR>
                           <TR>
@@ -202,16 +297,6 @@ Accessのデータベース化して、<br>
                             <TD class=f09 align="left"><FONT color=#24843f>2016/5/29</FONT></TD></TR>
                           <TR>
                             <TD class=f08 align="left">　サイト開設　</TD></TR>
-                          <TR>
-                            <TD>
-                              <HR width="95%">
-                            </TD></TR>
-                          <TR>
-                            <TD class=f09 align="left"><FONT color=#24843f>2016/5/18</FONT></TD></TR>
-                          <TR>
-                            <TD class=f08 align="left">姉妹サイト http://gairai.sakura.ne.jp/manju/
-			       
-			    </TD></TR>
                           <TR>
                             <TD>
                               <HR width="95%">
