--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="row">
     <div class="visible-sm visible-md visible-lg col-sm-1" ></div>
     <div class="col-sm-10 rinen" style="background-color:#eeffff">
-	生物データ保管サービス<BR clear="left">
-	<FONT color=#4169E1>
-	生き物好きが集まって、動き始めます。</FONT>
+	生物データ収集と集計、そしてブログ<BR clear="left">
+	<FONT color=#4169E1>塵も積もれば宝の山となる。</FONT>
     </div><!-- class="col-sm-10 rinen" -->
     <div class="visible-sm visible-md visible-lg col-sm-1"></div>
   </div>
@@ -100,128 +99,286 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
       <div class="col-md-6 col-lg-4 padding1" >
 	<table width="100%">
-	<tr><td align="center">1.データ収集</td></tr>
-	<tr><td id=headder1 align=center>鳥類</td>
+	<tr><td align="center">生物データ収集</td></tr>
+	<tr><td id=headder1 align=center>朝の鳥</td>
 	</tr>
 	</table>
 	<FONT color="#808000" size=2>
 朝、最初に見かけた鳥の種類を記録します。<br />
-データを蓄積することで<br />
+データを貯めておくと<br />
 季節の移り替わりを確認でき<br />
 朝の楽しみが一つ増えます。</font>
 <br />
 <br />
 	<div align="center">
-	<IMG alt=朝の鳥 src="./images/asanotori.png" width="200" class="img-responsive" >
+	<IMG alt=朝の鳥 src="./images/asanotori.png" width="244" class="img-responsive" >
 	<a href="http://gairai.sakura.ne.jp/asa/index.php?&myurl=071f9554bbb21eb69c886af2291faf59">デモ版はこちら</a><br>
 	</div>
 <br />
 <br />
-&emsp;<a href="http://gairai.sakura.ne.jp/asaregi/basic.php">使用申込みページ</a><br />
+&emsp;<a href="http://gairai.sakura.ne.jp/asaregi/basic.php">使用申込みはこちら</a><br />
 <br />
 	<table width=100%>
-	<tr><td id=headder1 align=center>朝の鳥の楽しみ</td></tr>
-	<tr><td align="center">2017年9月
-	<IMG alt=今月の鳥 src="./images/September.png" width="244" class="img-responsive" >
+	<!-- tr><td id=headder1 align=center>その他</td></tr -->
+	<tr><td align="center">
+	毎日、3分バードウォッチング<br />
+	<br />
+	&emsp;<!-- a href="./egret/index.html">サギのコロニー観察記録</a --><br />
+<div class="waku_waku">
+・「朝の鳥」カスタマイズ承ります。<br />
+　　観察項目の追加・変更等のご要望に応じます。<br>
+・「朝の鳥」に広告を掲載できます。
+</div>
+
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+
+<!-- a target="_blank"  href="https://www.amazon.co.jp/gp/product/486090933X/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=486090933X&linkCode=as2&tag=fuji56kasu-22&linkId=450f9fae43ec6697b4bef7f0257a0b7c"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=486090933X&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=fuji56kasu-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=fuji56kasu-22&l=am2&o=9&a=486090933X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /　--><br>
+
+<!-- 
+・ツバメ2は9月上旬。朝早くに空の高いところを数話の群れで飛んでいた。2日連続で確認。南に帰る直前か?<br /><br />
+・モズ1は秋の高鳴きの頃。その頃だけは住宅街にもよくきて、民家のTVアンテナの上でけたたましく鳴いている。<br /><br />
+・意外な健闘はジョウビタキ、この冬も11月21日にオスを初認。身近な鳥の中ではもっともオスメスを区別しやすい。<br /><br />
+・夜明け前に起きたり、布団の中で目を覚ましたりと、朝の早い時間に聞こえるのはカラスの声。早起きするとカラスのデータが増えていく。<br /><br />
+・カラスはハシブトとハシボソに割れているため３位だが、合計すれば１位。<br /><br />
+・ヒヨドリは冬に多く、キジバトは夏から秋にかけて多い。<br />
+<br />
 	</td></tr>
-	<tr><td align="center">2017年8月
-	<IMG alt=今月の鳥 src="./images/August.png" width="244" class="img-responsive" >
-	</td></tr>
-	<tr><td align="center">2017年7月
-	<IMG alt=7月の鳥 src="./images/July.png" width="244" class="img-responsive" >
-	</td></tr>
-	<tr><td align="center">2017年6月
-	<IMG alt=6月の鳥 src="./images/June.png" width="244" class="img-responsive" >
+	<tr><td align="center">2017年1～12月
+	<IMG alt=今年の鳥 src="./images/Y2017.png" width="244" class="img-responsive" >
 	</td></tr>
 	<tr><td align="center">2017年5月
 	<IMG alt=5月の鳥 src="./images/May.png" width="244" class="img-responsive" >
 	</td></tr>
-	<tr><td align="center">2017年1～8月
-	<IMG alt=今年の鳥 src="./images/kotoshi.png" width="244" class="img-responsive" >
+	<tr><td align="center">2017年6月
+	<IMG alt=6月の鳥 src="./images/June.png" width="244" class="img-responsive" >
 	</td></tr>
+	<tr><td align="center">2017年7月
+	<IMG alt=7月の鳥 src="./images/July.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年8月
+	<IMG alt=今月の鳥 src="./images/August.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年9月
+	<IMG alt=今月の鳥 src="./images/September.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年10月
+	<IMG alt=今月の鳥 src="./images/October.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年11月
+	<IMG alt=今月の鳥 src="./images/November.png" width="244" class="img-responsive" >
+	</td></tr>
+	<tr><td align="center">2017年12月
+	<IMG alt=今月の鳥 src="./images/December.png" width="244" class="img-responsive" >
+	</td></tr -->
 	</table>
 	<br />
-
     </div>
     	<!-- 2列目 -->
     <div class="col-md-6 col-lg-4 padding2" >
 	<table width=100%>
-	<tr><td align="center">2.情報共有</td></tr>
-	<tr><td id=headder1 align=center>本/Webページ/論文/他</td></tr>
+	<tr><td align="center">集計</td></tr>
+	<tr><td id=headder1 align=center>朝の鳥 観察データ(2018年)</td></tr>
+	<tr><td>当月</td></tr>
 	<tr><td>
-	&emsp;<a href="https://bookmeter.com/users/775060">読書メーター</a>
+<iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Tmonth&myurl=fujita" name="data1" id="data1" scrolling="no" height="260" frameBorder="0">
+</iframe>
 	</td></tr>
+	<tr><td>前月</td></tr>
+	<tr><td>
+<iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Lmonth&myurl=fujita" name="data2" id="data2" scrolling="no" height="260" frameBorder="0">
+</iframe>
+	</td></tr>
+	<tr><td>2017年同月
+<iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Tmonth&myurl=fujita&Year=2017" name="data4" id="data4" scrolling="no" height="260" frameBorder="0">
+</iframe>
+	</td></tr>
+	<tr><td>2018年</td></tr>
+	<tr><td>
+<iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Tyear&myurl=fujita" name="data3" id="data3"  scrolling="no" height="333" frameBorder="0">
+</iframe>
+	</td></tr>
+	<tr><td>2017年</td></tr>
+	<tr><td>
+<iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Lyear&myurl=fujita" name="data3" id="data3"  scrolling="no" height="333" frameBorder="0">
+</iframe>
+	</td></tr>
+	<tr><td>2017年データ</td></tr>
 	<tr><td align="center">
-	&emsp;&emsp;33冊（鳥類:32、他:1)<br />
-	<br />
+<table border=1 style="background-color:#F5F5F5;">
+    <tr >
+<td class="">種類</td>
+<td align="right" class=" nowrap">朝一番の確認回数</td>
+</tr>
+    <tr class="odd">
+<td class="">ヒヨドリ</td>
+<td align="right" class=" nowrap">71</td>
+</tr>
+    <tr class="even">
+<td class="">カラス</td>
+<td align="right" class=" nowrap">60</td>
+</tr>
+    <tr class="odd">
+<td class="">キジバト</td>
+<td align="right" class=" nowrap">57</td>
+</tr>
+    <tr class="even">
+<td class="">スズメ</td>
+<td align="right" class=" nowrap">32</td>
+</tr>
+    <tr class="odd">
+<td class="">ハシボソカラス</td>
+<td align="right" class=" nowrap">18</td>
+</tr>
+    <tr class="even">
+<td class="">ハシブトガラス</td>
+<td align="right" class=" nowrap">12</td>
+</tr>
+    <tr class="odd">
+<td class="">シジュウカラ</td>
+<td align="right" class=" nowrap">9</td>
+</tr>
+    <tr class="even">
+<td class="">ムクドリ</td>
+<td align="right" class=" nowrap">7</td>
+</tr>
+    <tr class="even">
+<td class="">カワラヒワ</td>
+<td align="right" class=" nowrap">6</td>
+</tr>
+    <tr class="odd">
+<td class="">ジョウビタキ</td>
+<td align="right" class=" nowrap">4</td>
+</tr>
+    <tr class="odd">
+<td class="">ハクセキレイ</td>
+<td align="right" class=" nowrap">2</td>
+</tr>
+    <tr class="even">
+<td class="">ツバメ</td>
+<td align="right" class=" nowrap">2</td>
+</tr>
+    <tr class="odd">
+<td class="">カルガモ</td>
+<td align="right" class=" nowrap">2</td>
+</tr>
+    <tr class="even">
+<td class="">モズ</td>
+<td align="right" class=" nowrap">1</td>
+</tr>
+    <tr class="odd">
+<td class="">オナガ</td>
+<td align="right" class=" nowrap">1</td>
+</tr>
+    <tr class="even">
+<td class="">ドバト</td>
+<td align="right" class=" nowrap">1</td>
+</tr>
+    <tr class="odd">
+<td class="">ツグミ</td>
+<td align="right" class=" nowrap">1</td>
+</tr>
+</table>
+
 	</td></tr>
 	</table>
-	<br />
-	<br />
-	&emsp;<a href="./egret/index.html">サギのコロニー観察記録</a><br />
-	<br />
-	<br />
-	<br />
-	<br />
-	&emsp;<a href="">ハクセキレイの塒観察記録</a>（準備中）<br />
-	<br />
-	<br />
-	<br />
-	<br />
-	&emsp;<a href="http://gairai.sakura.ne.jp/manju/">元朝秘史でバードウォッチング</a><br />
-	<br />
-	<br />
-	<br />
-	<br />
-	&emsp;<a href="http://outdoor.blogmura.com/birdwatching/">日本ブログ村 バードウォッチング</a><br />
+<br>
     </div>
     <!-- 3列目 -->
     <div class="col-md-6 col-lg-4 padding3" >
 	<table width=100%>
-	<tr><td align="center">3.ビジネス</td></tr>
-	<tr><td id=headder1 align=center>データベース化</td></tr>
+	<tr><td align="center">&nbsp;</td></tr>
+	<tr><td id=headder1 align=center>ブログ</td></tr>
+	</td></tr>
+	</table>
+	<br />
+<!-- a class="twitter-timeline" data-height="900" data-link-color="#19CF86" href="https://twitter.com/oldsumida?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script --> 
+
+<br>
+2018.3.17<br>
+元荒川でオオバンが何と30羽。川面と川岸の両方でヒドリガモと混群を作っていた。<br>
+<br>
+2018.3.16<br>
+近くのアパートの空き部屋の雨戸の戸袋でムクドリ夫婦が巣作りを始めた。賑やかだ。<br>
+<br>
+2018.3.14<br>
+隣家の梅の木でヒヨドリ２羽が花の蜜を吸うのに夢中。逃げる素振りもない。でも、昨年よりもヒヨドリの朝一回数が少ない。今年は渡来数が少ないのか、厳冬のためもっと南まで移動したのか。私一人の観察では判断できない。<br>
+<br>
+2018.3.11<br>
+古利根川にオオバンが何と20羽。増えたものだ。<br>
+<br>
+2018.3.8<br>
+ゴミ出しの帰り、前方の電柱の上辺りを黒い鳥が横切った。カラスかと思ったがもっと大柄。カワウだった。<br>
+<br>
+2018.3.4<br>
+ヒヨドリが花梨の新芽を食べにやってきた。毎年の恒例行事。<br>
+<br>
+2018.3.3<br>
+ヒヨドリが地面に降りてリュウノヒゲの青い実を探していた。この実、以前、ツグミも食べていた。（リュウノヒゲ？、タツノヒゲ？、よく分からない。）<br>
+<br>
+2018.2.26<br>
+集積所に出してあったゴミ袋をカラスに破られ、中のゴミが道路に散乱。片付けが終わった後、道路に残っていた野菜クズをハクセキレイが一羽、盛んにつついていた。ハクセキレイはもはや水辺の鳥ではなく都市の鳥だと思う。<br>
+<br>
+2018.2.25<br>
+ねぐらに帰らずにうちの近所の公園の樹木で夜を過ごすカラスがいる。このカラスが夜中の12時を過ぎて鳴くことがあるが、これは「朝の鳥」にカウントしないことにしている。
+まだ、朝ではないから。<br>
+<br>
+2018.2.24<br>
+私の鳥見の拠点は自宅から800mぐらいの所にある遊水池。水深が浅いせいでカイツブリには滅多にお目にかからないが、今日１羽発見。2013年以来。<br>
+<br>
+2018.2.21<br>
+今日もシジュウカラの囀りを聞いた。春に近づいているということかな？。庭にはツグミ。<br>
+<br>
+2018.2.20<br>
+昨日よりシジュウカラを見たり、聞いたりする。だが、朝一番はやはりヒヨドリ。<br>
+<br>
+2018.1.?<br>
+朝一番ではないが、オナガの群れを見た。30～40羽ぐらい。こんなに大きい群れは初めてだと思う。オナガはいつも決まってみれるわけではない。普段はどこにいるのだろうと気になる。<br>
+	<br />
+	<br />
+	<br />
+	&emsp;<!-- a href="http://gairai.sakura.ne.jp/manju/">元朝秘史でバードウォッチング</a --><br />
+	<br />
+	<br />
+	<br />
+	&emsp;<!-- a href="https://bookmeter.com/users/775060">読書メーター</a -->
+	</td></tr>
+	<tr><td align="center">
+	<!--&emsp;&emsp;33冊（鳥類:32、他:1)<br /  -->
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<table width=100%>
+	<tr><td id=headder1 align=center>運営元</td></tr>
 	<tr><td>
-<FONT color=#2c4b78 size=2>
+<!-- FONT color=#2c4b78 size=2>
 ファイルメーカーPro、または<br>
-Accessのデータベース化して、<br>
+Accessのデータベースに整理して<br>
 データを保管します。<br>
 <br />
 データ検索・集計に必要なプログラムを随時、作成します。<br>
 <br>
 	<FONT color="#808000" size=2>実績<br>
 ・医学演題（Web）<br />
-・診療データ（File Maker Pro Advanced）<br />
-・外来植物分布情報収集</font> &emsp;<a href="http://gairai.sakura.ne.jp/bunpu/zairai_form.html">サンプル</a><br />
-
+・診療データ（File Maker Pro）<br />
+・外来植物分布情報収集</font> &emsp;<a href="http://gairai.sakura.ne.jp/bunpu/zairai_form.html">サンプル</a --><br />
 	</td></tr>
 	</table>
 <br>
-<div class="waku_waku">
-・「朝の鳥」カスタマイズ<br />
-　　観察項目の追加・変更等のご要望に応じます。<br>
-・「朝の鳥」に広告を掲載できます。
-</div>
-
-<br>
-	<table width=100%>
-	<tr><td id=headder1 align=center>アフィリエート</td></tr>
-	</td></tr>
-	</table>
-<br>
-	<div align="center">
-<a target="_blank"  href="https://www.amazon.co.jp/gp/product/4829901713/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=4829901713&linkCode=as2&tag=fuji56kasu-22&linkId=324385fa78c8031411d1d30ad2d46bc0"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=4829901713&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL110_&tag=fuji56kasu-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=fuji56kasu-22&l=am2&o=9&a=4829901713" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
-<br>
-<a target="_blank"  href="https://www.amazon.co.jp/gp/product/486090933X/ref=as_li_tl?ie=UTF8&camp=247&creative=1211&creativeASIN=486090933X&linkCode=as2&tag=fuji56kasu-22&linkId=450f9fae43ec6697b4bef7f0257a0b7c"><img border="0" src="//ws-fe.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=JP&ASIN=486090933X&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=fuji56kasu-22" ></a><img src="//ir-jp.amazon-adsystem.com/e/ir?t=fuji56kasu-22&l=am2&o=9&a=486090933X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
-<br>
-<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&t=fuji56kasu-22&m=amazon&o=9&p=8&l=as1&IS2=1&detail=1&asins=458630006X&linkId=93ea957cc2e45c888916e9efad4738a9&bc1=ffffff&lt1=_blank&fc1=333333&lc1=0066c0&bg1=ffffff&f=ifr">
-    </iframe>
-	</div><!-- align="center" -->
-<br><br>
-	<div class="wakuKoukoku"><br>
+	<div class="wakuKoukoku">
 		<img src="./images/tonbo-f.gif" width="50" alt="" align=left >
 		&emsp;&emsp;生物データ保管サービス<br />
 		&emsp;&emsp;〒344-0047 埼玉県春日部市<br />
-		&emsp;&emsp;ＦＡＸ 048-611-7313<br />
+		&emsp;&emsp;asanotori@gairai.sakura.ne.jp<br />
 		<img src="./images/spacer.gif" width="50" alt="" align=left >
 		&emsp;&emsp;最寄駅 東武野田線豊春駅<br />
 		&emsp;&emsp;代表:藤田和彦</a><br>
@@ -259,6 +416,38 @@ Accessのデータベース化して、<br>
 			<span id="news" >WHAT'S NEW</span>
                         <TABLE cellSpacing=0 cellPadding=2 width="100%">
                           <TBODY>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2018/2/10</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　「朝の鳥」観察データをリアル配信開始。<br>　ツィッターを撤去。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2018/1/1</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　ツィッターを組み込みました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2018/1/1</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　「朝の鳥」2017年の全観察データをアップしました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2017/11/23</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　ブログよりリンクをはりました。</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
                           <TR>
                             <TD class=f09 align="left"><FONT color=#24843f>2017/7/29</FONT></TD></TR>
                           <TR>
@@ -310,6 +499,4 @@ Accessのデータベース化して、<br>
                             </TD></TR>
                             </TBODY></TABLE>
 			</DIV>
-
-
 </HTML>
