--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <TITLE>生物データ保管サービス</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=shift_jis">
-<META content="春日部市,自然,調査,市民による自然調査,自然観察会,外来生物調査" name=keywords>
+<META content="自然,調査,鳥見,バードウォッチング,分布調査" name=keywords>
 <LINK REL="SHORTCUT ICON" HREF="Haguro.ico"> 
 
 <!-- BootstrapのCSS読み込み -->
@@ -123,11 +123,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<tr><td align="center">
 	毎日、3分バードウォッチング<br />
 	<br />
-	&emsp;<!-- a href="./egret/index.html">サギのコロニー観察記録</a --><br />
+	こんな方にお薦め<br />&emsp;<!-- a href="./egret/index.html">サギのコロニー観察記録</a --><br />
 <div class="waku_waku">
-・「朝の鳥」カスタマイズ承ります。<br />
-　　観察項目の追加・変更等のご要望に応じます。<br>
-・「朝の鳥」に広告を掲載できます。
+遠出はできない<br />
+専門的な観察はできない<br>
+継続できるかどうか分からない<br />
+鳥のを見るのが好き<br />
 </div>
 
 	<br />
@@ -207,6 +208,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<tr><td>2017年</td></tr>
 	<tr><td>
 <iframe src="http://gairai.sakura.ne.jp/asa/graph.php?_act=Lyear&myurl=fujita" name="data3" id="data3"  scrolling="no" height="333" frameBorder="0">
+</iframe>
+	</td></tr>
+	<tr><td>2017年1月</td></tr>
+	<tr><td>
+<iframe src="http://gairai.sakura.ne.jp/asa/designategraph.php?_act=1701&myurl=fujita" name="data3" id="data3"  scrolling="no" height="333" frameBorder="0">
 </iframe>
 	</td></tr>
 	<tr><td>2017年データ</td></tr>
