--- a/index.html
+++ b/index.html
@@ -423,6 +423,14 @@ Accessのデータベースに整理して<br>
                         <TABLE cellSpacing=0 cellPadding=2 width="100%">
                           <TBODY>
                           <TR>
+                            <TD class=f09 align="left"><FONT color=#24843f>2018/3/17</FONT></TD></TR>
+                          <TR>
+                            <TD class=f08 align="left">　ブログ更新をストップ</TD></TR>
+                          <TR>
+                            <TD>
+                              <HR width="95%">
+                            </TD></TR>
+                          <TR>
                             <TD class=f09 align="left"><FONT color=#24843f>2018/2/10</FONT></TD></TR>
                           <TR>
                             <TD class=f08 align="left">　「朝の鳥」観察データをリアル配信開始。<br>　ツィッターを撤去。</TD></TR>
