--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="visible-sm visible-md visible-lg col-sm-1" ></div>
     <div class="col-sm-10 rinen" style="background-color:#eeffff">
 	生物データ収集と集計、そしてブログ<BR clear="left">
-	<FONT color=#4169E1>塵も積もれば宝の山となる。</FONT>
+	<FONT color=#4169E1>塵も積もれば宝の山となる。bio2</FONT>
     </div><!-- class="col-sm-10 rinen" -->
     <div class="visible-sm visible-md visible-lg col-sm-1"></div>
   </div>
